[package]
name = "cached_tree_hash"
version = "0.1.0"
authors = ["Michael Sproul <michael@sigmaprime.io>"]
edition = { workspace = true }

[dependencies]
ethereum-types = { workspace = true }
ssz_types = { git = "https://github.com/CRossel87a/ssz_types.git" }
ethereum_hashing = { workspace = true }
ethereum_ssz_derive = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
ethereum_ssz = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
tree_hash = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[features]
arbitrary = ["ethereum-types/arbitrary"]
