[package]
name = "fork_choice"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { workspace = true }
state_processing = { workspace = true }
proto_array = { workspace = true }
ethereum_ssz = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
ethereum_ssz_derive = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
slog = { workspace = true }

[dev-dependencies]
beacon_chain = { workspace = true }
store = { workspace = true }
tokio = { workspace = true }
