[package]
name = "proto_array"
version = "0.2.0"
authors = ["Paul Hauner <paul@sigmaprime.io>"]
edition = { workspace = true }

[[bin]]
name = "proto_array"
path = "src/bin.rs"

[dependencies]
types = { workspace = true }
ethereum_ssz = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
ethereum_ssz_derive = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
serde = { workspace = true }
serde_derive = "1.0.116"
serde_yaml = { workspace = true }
safe_arith = { workspace = true }
superstruct = { workspace = true }