[package]
name = "state_processing"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>", "Michael Sproul <michael@sigmaprime.io>"]
edition = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
beacon_chain = { workspace = true }
tokio = { workspace = true }

[dependencies]
arbitrary = { version = "1.0", features = ["derive"], optional = true }
bls = { workspace = true }
integer-sqrt = "0.1.5"
itertools = { workspace = true }
ethereum_ssz = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
ethereum_ssz_derive = { git = "https://github.com/CRossel87a/ethereum_ssz.git" }
ssz_types = { git = "https://github.com/CRossel87a/ssz_types.git" }
merkle_proof = { workspace = true }
safe_arith = { workspace = true }
tree_hash = { workspace = true }
types = { workspace = true }
rayon = { workspace = true }
ethereum_hashing = { workspace = true }
int_to_bytes = { workspace = true }
smallvec = { workspace = true }
lighthouse_metrics = { workspace = true }
lazy_static = { workspace = true }
derivative = { workspace = true }

[features]
default = ["legacy-arith"]
fake_crypto = ["bls/fake_crypto"]
legacy-arith = ["types/legacy-arith"]
arbitrary-fuzz = [
  "arbitrary",
  "types/arbitrary-fuzz",
  "bls/arbitrary",
  "merkle_proof/arbitrary",
  "ethereum_ssz/arbitrary",
  "ssz_types/arbitrary",
  "tree_hash/arbitrary",
]